opgroeiing gefixt en begonnen met swot

--- a/Blog posts/opgroeiing.html
+++ b/Blog posts/opgroeiing.html
@@ -9,36 +9,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
   <link rel="icon" type="image/x-icon" href="../Fotos en pdf/vuurwerk.svg">
-
-  <nav>
-    <div class="nav-content">
-      <ul class="navigation-bar">
-        <li><a class="terug-naar-blog" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
-        <li><a class="navigation-links" href="../index.html"><strong>Startpagina</strong></a></li>
-        <li><a class="navigation-links" href="../profile.html"><strong>Profiel</strong></a></li>
-        <li><a class="navigation-links" href="../dashboard.html"><strong>Dashboard</strong></a></li>
-        <li><a class="navigation-links" href="../blog.html"><strong>Blog</strong></a></li>
-        <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
-      </ul>
-      <div class="hzlogo">
-        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="../Fotos en pdf/hz-logo.png"
-            alt="hz-logo"></a>
-      </div>
-    </div>
-  </nav>
 </head>
 
 <body>
   <main>
+     <!-- De Navigation bar -->
+    <nav>
+      <div class="nav-content">
+        <ul class="navigation-bar">
+          <li><a class="terug-naar-blog" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
+          <li><a class="navigation-links" href="../index.html"><strong>Startpagina</strong></a></li>
+          <li><a class="navigation-links" href="../profile.html"><strong>Profiel</strong></a></li>
+          <li><a class="navigation-links" href="../dashboard.html"><strong>Dashboard</strong></a></li>
+          <li><a class="navigation-links" href="../blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
+        </ul>
+        <div class="hzlogo">
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="../Fotos en pdf/hz-logo.png"
+              alt="hz-logo"></a>
+        </div>
+      </div>
+    </nav>
     <h1>Opgroeien met technologie</h1>
-    <p class="blog-text">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
-      technologie. Ik herinner me dat ik als kind al uren doorbracht met het spelen van spelletjes op de computer en
-      verschillende gameconsoles. Maar het bleef niet alleen bij het spelen van games; al snel werd ik nieuwsgierig naar
-      hoe deze machines en software eigenlijk werkten. Ik wilde begrijpen hoe alles in elkaar zat: van het opstarten van
-      de computer tot de manier waarop programma's en spellen verschijnen op het scherm. Die nieuwsgierigheid groeide
-      uit
-      tot een passie voor technologie, die me ertoe dreef om steeds meer te leren over de werking van computers en
-      softwareontwikkeling. Om deze reden heb ik er voor gekozen om ICT te studeren op de HZ. </p>
+    <p class="blog-text">Waarom ICT? Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een interesse gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden. 
+      Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
     <div class="blog-foto-container">
       <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif">
       <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif">
@@ -47,6 +41,7 @@
 </body>
 
 <footer>
+    <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
