--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,10 @@
   <title>Blog</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
+</head>
 
+<body>
+  <!-- De Navigation bar -->
   <nav>
     <div class="nav-content">
       <ul class="navigation-bar">
@@ -22,10 +25,8 @@
       </div>
     </div>
   </nav>
-</head>
-
-<body>
   <h1>Welkom op mijn blog</h1>
+  <!-- Flex grid om de blogs te sorteren -->
   <div class="grid-container">
     <div class="grid-item">
       <p class="blog-text-short">Waarom ICT? Vanaf jongs af aan heb ik altijd een sterke interesse gehad in computers en
@@ -37,7 +38,7 @@
     <div class="grid-item">
       <p class="blog-text-short">Personal SWOT analysis - taken from your SKC document</p>
       <div class="readmore-container">
-        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+        <a class="readmore" href="Blog posts/swot-analysis.html">Read more</a>
       </div>
     </div>
     <div class="grid-item">
@@ -64,6 +65,7 @@
 
 </body>
 <footer>
+  <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
