--- a/dashboard.html
+++ b/dashboard.html
@@ -7,26 +7,25 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
-
-  <nav>
-    <div class="nav-content">
-      <ul class="navigation-bar">
-        <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-        <li><a class="navigation-links" id="dashboard" href="dashboard.html"><strong>Dashboard</strong></a></li>
-        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-        <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-      </ul>
-      <div class="hzlogo">
-        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
-
-      </div>
-    </div>
-  </nav>
 </head>
 
 <body>
   <main>
+     <!-- De Navigation bar -->
+    <nav>
+      <div class="nav-content">
+        <ul class="navigation-bar">
+          <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+          <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+          <li><a class="navigation-links" id="dashboard" href="dashboard.html"><strong>Dashboard</strong></a></li>
+          <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+        </ul>
+        <div class="hzlogo">
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
+        </div>
+      </div>
+    </nav>
     <h1>Dashboard</h1>
     <table class="schema">
       <tr style="background-color: white;">
@@ -145,6 +144,7 @@
 
 
 <footer>
+    <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
@@ -180,9 +180,9 @@
     });
   }
 
-  calculateTotal();
-  
-
+  /**
+ * Functie om de totaal behaalde EC's op te tellen en weer te geven.
+  */
   function calculateTotal() {
     const inputs = document.querySelectorAll('input[type="text"]');
     let total = 0;
@@ -190,7 +190,7 @@
     inputs.forEach(input => {
       const value = input.value.trim();
       if (value) {
-        const ec = parseFloat(value.replace(' EC', ''));
+        const ec = Number(value.replace(' EC', ''));
         if (!isNaN(ec)) {
           total += ec;
         }
@@ -201,7 +201,7 @@
     totalElement.textContent = `${total} EC`;
 
     const progressBar = document.getElementById('progressBar');
-    const percentage = (total / 60) * 100; // Assuming 60 EC is the maximum
+    const percentage = (total / 60) * 100;
     progressBar.style.width = `${percentage}%`;
     progressBar.style.backgroundColor = total >= 45 ? 'green' : 'red';
   }
