--- a/faq.html
+++ b/faq.html
@@ -7,25 +7,25 @@
   <title>Frequently Asked Question about HZ Univeristy</title>
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
-
-  <nav>
-    <div class="nav-content">
-      <ul class="navigation-bar">
-        <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
-        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-        <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
-      </ul>
-      <div class="hzlogo">
-        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
-      </div>
-    </div>
-  </nav>
 </head>
 
 <body id="faq-body">
   <main>
+    <!-- De Navigation bar -->
+    <nav>
+      <div class="nav-content">
+        <ul class="navigation-bar">
+          <li><a class="navigation-links" href="index.html"><strong>Startpagina</strong></a></li>
+          <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+          <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+          <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" id="faq" href="faq.html"><strong>FAQ</strong></a></li>
+        </ul>
+        <div class="hzlogo">
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
+        </div>
+      </div>
+    </nav>
     <h1>Veelgestelde vragen</h1>
     <div class="faq-container">
       <details>
@@ -63,6 +63,7 @@
   </main>
 </body>
 <footer>
+    <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
