--- a/index.html
+++ b/index.html
@@ -9,24 +9,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
-  <nav>
-    <div class="nav-content">
-      <ul class="navigation-bar">
-        <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
-        <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-        <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-        <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-        <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-      </ul>
-      <div class="hzlogo">
-        <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
-      </div>
-    </div>
-  </nav>
 </head>
 
 <body>
   <main>
+     <!-- De Navigation bar -->
+    <nav>
+      <div class="nav-content">
+        <ul class="navigation-bar">
+          <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
+          <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+          <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+          <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+        </ul>
+        <div class="hzlogo">
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
+        </div>
+      </div>
+    </nav>
     <header>
       <h1>Startpagina1</h1>
 
@@ -34,6 +35,7 @@
   </main>
 </body>
 <footer>
+    <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
