--- a/blog.html
+++ b/blog.html
@@ -36,15 +36,15 @@
       </div>
     </div>
     <div class="grid-item">
-      <p class="blog-text-short">Personal SWOT analysis - taken from your SKC document</p>
+      <p class="blog-text-short">Mijn persoonlijke SWOT-analyse</p>
       <div class="readmore-container">
         <a class="readmore" href="Blog posts/swot-analysis.html">Read more</a>
       </div>
     </div>
     <div class="grid-item">
-      <p class="blog-text-short">Programming experience - taken from the SKC questionnaire</p>
+      <p class="blog-text-short">Mijn Programeerervaring</p>
       <div class="readmore-container">
-        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+        <a class="readmore" href="Blog posts/programeer-ervaring.html">Read more</a>
       </div>
     </div>
     <div class="grid-item">
