--- a/dashboard.html
+++ b/dashboard.html
@@ -136,9 +136,9 @@
 <!-- Kleur INDEX -->
 <div class="color-container">
   <ul>
-    <li><span class="color-box" style="background-color: yellow;"></span> In Progress</li>
-    <li><span class="color-box" style="background-color: lightgray;"></span> Not Started</li>
-    <li><span class="color-box" style="background-color: lightgreen;"></span> Completed</li>
+    <li><span class="color-box" style="background-color: yellow;"></span> In Progressie</li>
+    <li><span class="color-box" style="background-color: lightgray;"></span> Nog niet gestart</li>
+    <li><span class="color-box" style="background-color: lightgreen;"></span> Afgerond</li>
   </ul>
 </div>
 
@@ -147,15 +147,10 @@
     <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
-      <li class="footer-text"><a class="footer-links" target="_blank"
-          href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
-          and Examination Regulations</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
-          Regulations
-          HBO-ICT</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course and Examination Regulations</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation Regulations HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
-      <li class="footer-text"><a class="footer-links" target="_blank"
-          href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://hz.osiris-student.nl/voortgang">Studievoortgang</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/HZ-HBO-ICT">HZ Github</a>
       </li>
     </ul>
