--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
     </nav>
     <h1>Achraf</h1>
     <article>
-      <h3>Over mezelf</h3>
+      <h3 id="kopje-links">Over mezelf</h3>
       <article class="profiel-text-container">
         <p class="profiel-text">Lorem ipsum dolor sit amet. Qui omnis quia vel sint quia id cumque totam At
           explicabo maiores ad labore atque in officia voluptatum hic repellat perferendis. Eum dolorum omnis
