programeerervaring afgerond op plaatjes na

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <main>
-     <!-- De Navigation bar -->
+    <!-- De Navigation bar -->
     <nav>
       <div class="nav-content">
         <ul class="navigation-bar">
@@ -35,14 +35,14 @@
   </main>
 </body>
 <footer>
-    <!-- Aside menu -->
+  <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="Fotos en pdf/all courses.pdf">Implementation
-          Regulations
+         F Regulations
           HBO-ICT</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank" href="https://learn.hz.nl/"> HZ Learn</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank"
