bezig met blogs nu skc-feedback

--- a/blog.html
+++ b/blog.html
@@ -48,11 +48,9 @@
       </div>
     </div>
     <div class="grid-item">
-      <p class="blog-text-short">First feedback - The feedback you had from the SKC assignment and what your thoughts
-        were about
-        that feedback.</p>
+      <p class="blog-text-short">The first feedback from the SKC assignment.</p>
       <div class="readmore-container">
-        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+        <a class="readmore" href="Blog posts/skc-feedback.html">Read more</a>
       </div>
     </div>
     <div class="grid-item">
