--- a/Blog posts/AI-ICT.html
+++ b/Blog posts/AI-ICT.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <title>Pagina over hoe ik ben opgegroeid met technologie</title>
+  <title>AI in ICT</title>
   <meta name="description"
-    content="Dit is een blogpost over mijn opgroeiing met computers en andere technologie.">
+    content="Dit is een blogpost over mijn mening over AI in de ICT.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
