--- a/Blog posts/skc-feedback.html
+++ b/Blog posts/skc-feedback.html
@@ -4,7 +4,7 @@
 <head>
   <title>SKC Feedback</title>
   <meta name="description"
-    content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
+    content="Dit is mijn blogpost over de feedback die ik heb gekregen over mijn SKC-opdracht.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
@@ -13,7 +13,7 @@
 
 <body>
   <main>
-     <!-- De Navigation bar -->
+    <!-- De Navigation bar -->
     <nav>
       <div class="nav-content">
         <ul class="navigation-bar">
@@ -31,17 +31,19 @@
       </div>
     </nav>
     <h1>The first feedback from the SKC assignment.</h1>
-    <p class="blog-text">Waarom ICT? Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een interesse gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden. 
-      Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
+    <p class="blog-text">Jammer genoeg heb ik geen feedback gekregen over mijn SKC assignment. In deze assignment heb ik
+      voornamelijk over mezelf verteld, zoals mijn naam, leeftijd en woonplaats bijvoorbeeld. Ik heb vragen beantwoord
+      over mijn vooropleiding en ook wat ik zou willen doen nadat ik deze studie op de HZ heb voltooid. Deze SKC
+      assignment bevat mijn SWOT-analyse, meer daarover in mijn andere blogpost.</p>
     <div class="blog-foto-container">
-      <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif">
-      <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif">
+      <img class="blog-foto" src="https://as2.ftcdn.net/v2/jpg/02/80/99/93/1000_F_280999349_vuzrFI7Brua6iErPSVdjN2mWrqsZtk2f.jpg">
+      <img class="blog-foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6J33-PRJkUOeCiAxdja2jp6rhYSSigJPiGw&s">
     </div>
   </main>
 </body>
 
 <footer>
-    <!-- Aside menu -->
+  <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
