--- a/Blog posts/swot-analysis.html
+++ b/Blog posts/swot-analysis.html
@@ -4,7 +4,7 @@
 <head>
   <title>SWOT Analysis</title>
   <meta name="description"
-    content="Mijn portfolio bevat mijn motivatie en Studievoortgang voor het studeren van HBO-ICT op de HZ.">
+    content="Dit is mijn blogpost over mijn SWOT-analysis.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
