--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
+  <meta name="description"
+    content="Dit is mijn blogpagina, hier kun je blogs over mij en de ICT vinden.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
@@ -56,7 +58,7 @@
     <div class="grid-item">
       <p class="blog-text-short">At least one article about the ICT field of work.</p>
       <div class="readmore-container">
-        <a class="readmore" href="Blog posts/opgroeiing.html">Read more</a>
+        <a class="readmore" href="Blog posts/AI-ICT.html">Read more</a>
       </div>
     </div>
   </div>
