--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
+  <meta name="description"
+    content="Dit is mijn Dashboardpagina, hier vind je voortgang van mijn studie.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
