--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mijn profiel</title>
+  <meta name="description"
+    content="Op mijn profiel vertel ik over mezelf.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
