--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="grid-item">
-      <p class="blog-text-short">At least one article about the ICT field of work.</p>
+      <p class="blog-text-short">De nieuwe rol van AI in de ICT</p>
       <div class="readmore-container">
         <a class="readmore" href="Blog posts/AI-ICT.html">Read more</a>
       </div>
