blog posts gefixt and profile afgemaakt

--- a/Blog posts/skc-feedback.html
+++ b/Blog posts/skc-feedback.html
@@ -3,8 +3,7 @@
 
 <head>
   <title>SKC Feedback</title>
-  <meta name="description"
-    content="Dit is mijn blogpost over de feedback die ik heb gekregen over mijn SKC-opdracht.">
+  <meta name="description" content="Dit is mijn blogpost over de feedback die ik heb gekregen over mijn SKC-opdracht.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/styles.css">
@@ -17,11 +16,10 @@
     <nav>
       <div class="nav-content">
         <ul class="navigation-bar">
-          <li><a class="terug-naar-blog" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
           <li><a class="navigation-links" href="../index.html"><strong>Startpagina</strong></a></li>
           <li><a class="navigation-links" href="../profile.html"><strong>Profiel</strong></a></li>
           <li><a class="navigation-links" href="../dashboard.html"><strong>Dashboard</strong></a></li>
-          <li><a class="navigation-links" href="../blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" id="blog-post" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
           <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
         </ul>
         <div class="hzlogo">
@@ -35,9 +33,12 @@
       voornamelijk over mezelf verteld, zoals mijn naam, leeftijd en woonplaats bijvoorbeeld. Ik heb vragen beantwoord
       over mijn vooropleiding en ook wat ik zou willen doen nadat ik deze studie op de HZ heb voltooid. Deze SKC
       assignment bevat mijn SWOT-analyse, meer daarover in mijn andere blogpost.</p>
+    <!-- 2 plaatjes onderaan -->
     <div class="blog-foto-container">
-      <img class="blog-foto" src="https://as2.ftcdn.net/v2/jpg/02/80/99/93/1000_F_280999349_vuzrFI7Brua6iErPSVdjN2mWrqsZtk2f.jpg">
-      <img class="blog-foto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6J33-PRJkUOeCiAxdja2jp6rhYSSigJPiGw&s">
+      <img class="blog-foto"
+        src="https://as2.ftcdn.net/v2/jpg/02/80/99/93/1000_F_280999349_vuzrFI7Brua6iErPSVdjN2mWrqsZtk2f.jpg">
+      <img class="blog-foto"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6J33-PRJkUOeCiAxdja2jp6rhYSSigJPiGw&s">
     </div>
   </main>
 </body>
