--- a/dashboard.html
+++ b/dashboard.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <meta name="description"
-    content="Dit is mijn Dashboardpagina, hier vind je voortgang van mijn studie.">
+  <meta name="description" content="Dit is mijn Dashboardpagina, hier vind je voortgang van mijn studie.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
@@ -29,6 +28,7 @@
       </div>
     </nav>
     <h1>Dashboard</h1>
+    <!-- Html table dat alle vakken en examens bevat van het eerste jaar -->
     <table class="schema">
       <tr style="background-color: white;">
         <th>Quarter</th>
