--- a/faq.html
+++ b/faq.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frequently Asked Question about HZ Univeristy</title>
-  <meta name="description"
-    content="Dit is een pagina die een paar Veelgestelde vragen beantwoord.">
+  <meta name="description" content="Dit is een pagina die een paar Veelgestelde vragen beantwoord.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
@@ -32,13 +31,15 @@
     <div class="faq-container">
       <details>
         <summary class="faq-questions">Hoe kun je op de HZ een document printen vanaf je laptop?</summary>
-        <p class="faq-text">Ga naar <a class="faq-links" href="https://hz.mynetpay.nl/" target="_blank">hz.mynetpay.nl</a> en vul je
+        <p class="faq-text">Ga naar <a class="faq-links" href="https://hz.mynetpay.nl/"
+            target="_blank">hz.mynetpay.nl</a> en vul je
           inloggegevens in. klik hierna op "Web print". Kies een printer en selecteer je document. Controleer de
           instelling en klik op "Upload selected files". Gebruik je HZ-pas om het printen te voltooien.</p>
       </details>
       <details>
         <summary class="faq-questions">Hoe kun je bij de HZ een document scannen en naar je laptop sturen?</summary>
-        <p class="faq-text">Log in op de printer met je HZ-pas. Klik op "Scan" en plaats je document op het glas. Controleer de
+        <p class="faq-text">Log in op de printer met je HZ-pas. Klik op "Scan" en plaats je document op het glas.
+          Controleer de
           instellingen en klik op "Start". Na het scannen log je uit en neem je je document weer mee.</p>
       </details>
       <details>
@@ -57,7 +58,8 @@
       <details>
         <summary class="faq-questions">Wat zijn de instructies als je je auto op het parkeerterrein van de HZ wilt
           parkeren?</summary>
-        <p class="faq-text">Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de Kousteensedijk in
+        <p class="faq-text">Sinds dit jaar zijn er voor HZ'ers plekken beschikbaar in de parkeergarage aan de
+          Kousteensedijk in
           Middelburg. Zorg er voor dat je je inrijkaart goed bewaard. Op vertoon van je inrijkaart kun je dan bij de
           servicebalie van het JRCZ een uitrijkaart krijgen.</p>
       </details>
@@ -65,7 +67,7 @@
   </main>
 </body>
 <footer>
-    <!-- Aside menu -->
+  <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
       <li class="footer-text"><a class="footer-links" target="_blank"
