--- a/profile.html
+++ b/profile.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mijn profiel</title>
-  <meta name="description"
-    content="Op mijn profiel vertel ik over mezelf.">
+  <meta name="description" content="Op mijn profiel vertel ik over mezelf.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
@@ -29,35 +28,42 @@
       </div>
     </nav>
     <h1>Achraf</h1>
-    <article>
-      <h3 id="kopje-links">Over mezelf</h3>
-      <article class="profiel-text-container">
-        <p class="profiel-text">Lorem ipsum dolor sit amet. Qui omnis quia vel sint quia id cumque totam At
-          explicabo maiores ad labore atque in officia voluptatum hic repellat perferendis. Eum dolorum omnis
-          id nostrum dolores et dicta incidunt sit voluptatem alias qui iste odit. Et nulla voluptas et
-          galisum autem non atque voluptatum et corporis tenetur. Vel eligendi quam et animi ipsa eum
-          voluptatibus ratione ut facilis repellendus.</p>
-        <ul>
-          <li class="hobbies">Voetbal/Basketbal</li>
-          <li class="hobbies">Voetbal en F1 kijken</li>
-        </ul>
-      </article>
+    <h3 class="kopje">Wie ben ik?</h3>
+    <!-- Twee stukken met informatie over mezelf -->
+    <article class="profiel-text-container">
+      <p class="profiel-text">Welkom op mijn profiel. Ik ben Achraf. Ik ben 21 jaar en ik ben geboren en woon in
+        Vlissingen. Ik woon nog thuis met mijn ouders en mijn zusje. Gelukkig is Vlissingen lekker dichtbij de HZ, want
+        ik heb vaak wel moeite
+        met het vroeg opstaan. Ik heb op de middelbare school het profiel natuur en gezondheid afgerond. Dat zijn dus de
+        vakken biologie, scheikunde en natuurkunde. Hier een lijstje met mijn persoonlijke karaktereigenschappen:
+      <ul>
+        <li class="hobbies">Geduldig - Ik vind dat ik goed naar mensen kan luisteren en begrijpen.</li>
+        <li class="hobbies">Nieuwsgierig - Als iets me interesseert wil ik er graan meer over weten. </li>
+        <li class="hobbies">Eerlijk - Als ik iemand mijn mening vraagt, geef ik altijd eerlijk mijn mening.</li>
+        <li class="hobbies">Flexibel - Ik ben niet de moeilijkste. Als iemand een afspraak wil verzetten of ergens
+          anders wilt afspreken is dat geen probleem.</li>
 
-      <div class="blog-foto-container">
-        <img class="blog-foto" src="Fotos en pdf/fotokat.jpg" alt="Foto van mijn kat in de tuin">
-        <img class="blog-foto" src="Fotos en pdf/fotokat2.jpg" alt="Foto van mijn kat binnen">
-      </div>
-
-
-
+      </ul>
+      </p>
+      <h3 class="kopje">Meer over mijn leven</h3>
+      <p class="profiel-text">In mijn vrije tijd vind ik het leuk om te gamen, voetballen of basketballen met vrienden
+        en sport te kijken. Ik kijk altijd de F1 highlights en ik volg ook de Champions league en Premier League.
+        Hieronder zie je 2 foto's van mijn kat genaamd "Lucky". Hij is nu 9 jaar oud en komt uit
+        Marokko.</p>
     </article>
-
+    <!-- 2 plaatjes onderaan -->
+    <div class="blog-foto-container">
+      <img class="blog-foto" src="Fotos en pdf/fotokat.jpg" alt="Foto van mijn kat in de tuin">
+      <img class="blog-foto" src="Fotos en pdf/fotokat2.jpg" alt="Foto van mijn kat binnen">
+    </div>
   </main>
 </body>
 <footer>
   <!-- Aside menu -->
   <div class="footer-container">
     <ul class="footer-ul">
+      <li class="footer-text"><a class="footer-links" target="_blank" href="https://github.com/AchrafEAE">My Github
+          Profile</a></li>
       <li class="footer-text"><a class="footer-links" target="_blank"
           href="https://hz.nl/uploads/documents/1.4-Over-de-HZ/1.4.3.-Regelingen-en-documenten/OERS/2023-2024/Juli/CER-HZ-Bachelor-full-time-2023-2024-DEF-version-20240412.pdf">Course
           and Examination Regulations</a></li>
