--- a/Blog posts/opgroeiing.html
+++ b/Blog posts/opgroeiing.html
@@ -17,11 +17,10 @@
     <nav>
       <div class="nav-content">
         <ul class="navigation-bar">
-          <li><a class="terug-naar-blog" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
           <li><a class="navigation-links" href="../index.html"><strong>Startpagina</strong></a></li>
           <li><a class="navigation-links" href="../profile.html"><strong>Profiel</strong></a></li>
           <li><a class="navigation-links" href="../dashboard.html"><strong>Dashboard</strong></a></li>
-          <li><a class="navigation-links" href="../blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" id="blog-post" href="../blog.html"><strong>Terug naar Blog</strong></a></li>
           <li><a class="navigation-links" href="../faq.html"><strong>FAQ</strong></a></li>
         </ul>
         <div class="hzlogo">
@@ -33,7 +32,8 @@
     <h1>Opgroeien met technologie</h1>
     <p class="blog-text">Waarom ICT? Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een interesse gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden. 
       Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
-    <div class="blog-foto-container">
+    <!-- 2 plaatjes onderaan -->
+      <div class="blog-foto-container">
       <img class="blog-foto" src="../Fotos en pdf/Technologie foto1.avif">
       <img class="blog-foto" src="../Fotos en pdf/technologie foto2.avif">
     </div>
