--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
-  <meta name="description"
-    content="Dit is mijn blogpagina, hier kun je blogs over mij en de ICT vinden.">
+  <meta name="description" content="Dit is mijn blogpagina, hier kun je blogs over mij en de ICT vinden.">
   <link rel="stylesheet" href="assets/styles.css">
   <link rel="icon" type="image/x-icon" href="Fotos en pdf/vuurwerk.svg">
 </head>
