bezig met startp

--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
       </div>
     </nav>
     <header>
-      <h1>Startpagina1</h1>
-
+      <h1>Welkom op mijn website!</h1>
+      <h3 class="kopje">Waarom heb ik gekozen voor ICT? </h3>
+      <p class="index-text">Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op
+        websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een interesse
+        gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden. Klik <a class="index-links" href="Fotos en pdf/eerste-setup.jpg" target="_blank">hier</a> voor een foto van mijn eerste gaming setup.
+        Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
+      <h3 class="kopje">Wat beeld ik me in voor de toekomst?</h3>
+      <p class="index-text">Na dat ik deze studie heb afgerond hoop ik een software engineer te worden. Ik hoop voor
+        goed bedrijf in een leuk team te werken aan nieuwe websites, telefoon apps of andere applicaties. Ik heb er veel
+        vertrouwen in omdat er veel werkmogelijkheden zijn in de ICT.</p>
     </header>
   </main>
 </body>
