--- a/index.html
+++ b/index.html
@@ -13,33 +13,43 @@
 
 <body>
   <main>
-    <!-- De Navigation bar -->
-    <nav>
-      <div class="nav-content">
-        <ul class="navigation-bar">
-          <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
-          <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-          <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-          <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-          <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-        </ul>
-        <div class="hzlogo">
-          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
-        </div>
-      </div>
-    </nav>
     <header>
-      <h1>Welkom op mijn website!</h1>
-      <h3 class="kopje">Waarom heb ik gekozen voor ICT? </h3>
-      <p class="index-text">Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op
-        websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een interesse
-        gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden. Klik <a class="index-links" href="Fotos en pdf/eerste-setup.jpg" target="_blank">hier</a> voor een foto van mijn eerste gaming setup.
-        Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
-      <h3 class="kopje">Wat beeld ik me in voor de toekomst?</h3>
-      <p class="index-text">Na dat ik deze studie heb afgerond hoop ik een software engineer te worden. Ik hoop voor
-        goed bedrijf in een leuk team te werken aan nieuwe websites, telefoon apps of andere applicaties. Ik heb er veel
-        vertrouwen in omdat er veel werkmogelijkheden zijn in de ICT.</p>
+      <!-- De Navigation bar -->
+      <nav>
+        <div class="nav-content">
+          <ul class="navigation-bar">
+            <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
+            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+            <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+          </ul>
+          <div class="hzlogo">
+            <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png"
+                alt="hz-logo"></a>
+          </div>
+        </div>
+      </nav>
     </header>
+    <h1>Welkom op mijn website!</h1>
+    <h3 class="kopje">Waarom heb ik gekozen voor ICT? </h3>
+    <p class="index-text">Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op
+      websites en gauw werd ik geïnteresseerd hoe deze websites nou eigenlijk werken. Sinds dien heb ik altijd al een
+      interesse
+      gehad in technologie. Ik heb toen ik 15 jaar was, mijn eerste computer gebouwd met behulp van een paar vrienden.
+      Klik <a class="index-links" href="Fotos en pdf/eerste-setup.jpg" target="_blank">hier</a> voor een foto van mijn
+      eerste gaming setup.
+      Hierdoor bleef mijn interesse steeds maar stijgen. Om deze reden heb ik er voor gekozen om ICT te studeren.</p>
+    <hr class="styled-hr">
+    <h3 class="kopje">Wat beeld ik me in voor de toekomst?</h3>
+    <p class="index-text">Na dat ik deze studie heb afgerond hoop ik een software engineer te worden. Ik hoop voor
+      goed bedrijf in een leuk team te werken aan nieuwe websites, telefoon apps of andere applicaties. Ik heb er veel
+      vertrouwen in omdat er veel richtingen en werkmogelijkheden zijn in de ICT.</p>
+    <!-- 2 plaatjes onderaan -->
+    <div class="blog-foto-container">
+      <img class="blog-foto" src="Fotos en pdf/muis.jpg">
+      <img class="blog-foto" src="Fotos en pdf/keyboard.jpg">
+    </div>
   </main>
 </body>
 <footer>
