bezig met comments en laatste dingetjes

--- a/index.html
+++ b/index.html
@@ -12,25 +12,26 @@
 </head>
 
 <body>
-  <main>
-    <header>
-      <!-- De Navigation bar -->
-      <nav>
-        <div class="nav-content">
-          <ul class="navigation-bar">
-            <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
-            <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
-            <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
-            <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
-            <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
-          </ul>
-          <div class="hzlogo">
-            <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png"
-                alt="hz-logo"></a>
-          </div>
+  <header>
+    <!-- De Navigation bar -->
+    <nav>
+      <div class="nav-content">
+        <ul class="navigation-bar">
+          <li><a class="navigation-links" id="startpagina" href="index.html"><strong>Startpagina</strong></a></li>
+          <li><a class="navigation-links" href="profile.html"><strong>Profiel</strong></a></li>
+          <li><a class="navigation-links" href="dashboard.html"><strong>Dashboard</strong></a></li>
+          <li><a class="navigation-links" href="blog.html"><strong>Blog</strong></a></li>
+          <li><a class="navigation-links" href="faq.html"><strong>FAQ</strong></a></li>
+        </ul>
+        <!-- HZ Logo met link naar de HZ-website -->
+        <div class="hzlogo">
+          <a class="hzlogo" href="https://hz.nl/" target="_blank"><img src="Fotos en pdf/hz-logo.png" alt="hz-logo"></a>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
+
+  <main>
     <h1>Welkom op mijn website!</h1>
     <h3 class="kopje">Waarom heb ik gekozen voor ICT? </h3>
     <p class="index-text">Al sinds dat ik klein was had ik een interesse voor computers. Ik speelde spelletjes op
@@ -70,5 +71,4 @@
     </ul>
   </div>
 </footer>
-
 </html>
